--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres
+    image: postgres:16
     restart: always
     environment:
       POSTGRES_USER: root
@@ -12,6 +12,15 @@ services:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - postgres_network
+  keycloak:
+    image: quay.io/keycloak/keycloak:24.0
+    container_name: keycloak
+    command: start-dev
+    ports:
+      - "4000:8080"
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
 
 volumes:
   postgres_data:
